# doumdeli-business

./: .env  .gitignore  Cargo.toml  LICENSE
.github/workflows/: backend-ci.yml
github/workflows/: backend-ci.yml
migrations/: 20260617000000_init.sql
src/: config.rs  lib.rs  main.rs  routes.rs
src/handlers/: auth_handler.rs  mod.rs  product_handler.rs
src/models/: Order.rs  mod.rs  order.rs  product.rs  user.rs
src/services/: mod.rs
tests/: Auth_tests.rs  Product_tests.rs  common.rs
web/: app.js  index.html  sw.js
