[package]
name = "doumdeli-business"
version = "0.1.0"
edition = "2021"
authors = ["Senior Rust Backend Engineer"]

# إخبار المترجم بأن المشروع يحتوي على مكتبة داخلية لكي تقرأها ملفات الـ tests
[lib]
name = "doumdeli_business"
path = "src/main.rs" # أو إذا كانت بنيتك تعتمد على تحويل main لـ lib فرعي

[dependencies]
# Web Framework & Async Runtime
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Database & ORM
sqlx = { version = "0.7.4", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid", "rust_decimal" ] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }

# Math & Money Handling
rust_decimal = { version = "1.35.0", features = ["serde-float"] }
# إضافة مكتبة الماكرو لحل خطأ unresolved import `rust_decimal_macros`
rust_decimal_macros = "1.35.0"

# Authentication & Security
jsonwebtoken = "10.3.0"
argon2 = "0.5.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

# Documentation & API Specs
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

# Utilities
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
